--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -43,6 +43,13 @@ header{
 }
 
 
+
+.navBardemoBasicUsage md-content .ext-content {
+  padding: 50px;
+  margin: 20px;
+  background-color: #FFF2E0; }
+
+
 .modalDialog {
 	/*position: fixed;*/
 	font-family: Arial, Helvetica, sans-serif;
