--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -15,7 +15,7 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-item: flex-end;
-	text-align:center;
+	/*text-align:center;*/
 	/*position:fixed;*/
 }
 .logo img{
