--- a/client/app/styles/home.css
+++ b/client/app/styles/home.css
@@ -1,25 +1,31 @@
 .best table{
-	margin:auto;
 	margin-top: 1%;
-	margin-bottom: 2%;
+	margin-bottom: 4%;
 	text-decoration:none;
 	text-align: center;
 	border-collapse: collapse;
 	width: 90%;
-
+	border-spacing:100px 200px;
 
 }
 
 .best table>tr>td>a>img{
 	width: 100px;
-	margin-bottom: 15%;
-	box-shadow: 5px 5px 8px black;
+}
+
+#dataSuggest{
+	padding-top: 5%;
+}
+#dataBest{
+	padding-top: 5%;
 }
 
 
 .poster1{
 	width: 80%;
 }
+
+
 
 h1{
 	font-family:"palatino linotype", palatino, serif;
