--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -21,6 +21,7 @@ header{
 	/*position:fixed;*/
 }
 .logo img{
+
 	text-shadow: black 0px 0px;	
 	width:100%;        
         box-shadow:1 1 30px 10px grey;
@@ -51,26 +52,39 @@ header{
 	margin-top:10%;
 }
 
+
+
 .navbar-right{
-	width:10%;
+	margin-right: 0px;
 	display: inline-flex;
+}
+
+.navbar-right a{
+	text-decoration: none;
+	color:#B3B3B3;
+	margin: auto;
+}
+
+.ConnexInscr {
+	margin:auto;
+	color:grey;
 }
 
 /*Recherche : */
 .searchIndex{
-
 	display: flex;
 	margin-top: 8px;
 	text-align: center;
 	/*margin-right: 0px;*/
 	/*display: inline-block;*/
 	margin-left: 0px;
-	/*width: 250%;*/
+	width: 100%;
 
 }
 
 .searchIndex a{
 	margin-left: 1%;
+	text-align: center;
 }
 
 .txtSearchIndex{
@@ -78,21 +92,73 @@ header{
 	width: 550px;
 }
 
-
-
-.glyphicon-plus{
-	color:white;
-	font-size:110%;
-	margin-bottom: 0px; 
+.txtSearch2{
+	width: 50%;
+	color: black;
 }
 
-#rechPlus{
-	margin:auto;
+
+
+.rechPlus{
+	/*text-align: center;*/
 	color: grey;
+	border-style: none none none double;
+
+
+	width: 150%;
+
 	/*text-align: left;*/
 	/*margin-bottom: 10%;*/
-	border-width:1px 2px 3px 2px;
-	/*margin-right: 0px;*/
+	margin-left: 0px;
+	padding-left: 5%;
+}
+
+.rechPlus h1{
+	text-align: left;
+	font-size: 200%;
+
+}
+
+
+.rechPlus h3{
+	text-align: left;
+	font-size: 180%;
+	font-family:"palatino linotype", palatino, serif;
+}
+
+
+
+.rechPlus td{
+
+	text-align: left;
+	width: 27%;
+}
+
+.rechPlus table{
+	table-layout:fixed;
+	border-spacing: 20%;
+	white-space:nowrap;
+
+	/*width: 25%;*/
+	margin:auto;
+	margin-bottom: 2%;
+}
+
+.glyphicon-plus-sign{
+	color: white;
+}
+
+.rechPlus p{
+	text-align: center;
+}
+
+.searchIndex a{
+	text-decoration:none;
+}
+}
+
+.glyphicon-minus-sign{	
+	color: white;
 }
 
 .centre{
