--- a/client/app/views/achat.html
+++ b/client/app/views/achat.html
@@ -1,30 +1,89 @@
 <div class="achat" ng-controller="achatCtrl">
-	Mes achats
 
-	<a href="#openModalj">Open Modal</a>
-	<input type="checkbox" ng-model="displayFavoriteinscrip">
-	<div id="openModal" class="modalDialog" ng-show="displayFavoriteinscrip">
-		<div>
-			<a href="#close" title="Close" class="close">X</a>
-			<h2>Modal Box</h2>
-			<p>This is a sample modal box that can be created using the powers of CSS3.</p>
-			<p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
-		</div>
-	</div>
-
-
-	<a href="" data-rel="popup" class="ui-btn ui-corner-all ui-shadow ui-btn-inline openPaddingLink" data-transition="pop" ng-click="open()">Basic Popup</a>
-<!--a href="" class="openPaddingLink" ng-click="open()">Open dialog</a>
-    <- Template -->
+	<div class="listAchat">
+        <h1>Mes achats</h1>
+        <p>La liste de tous vos achats</p>            
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Réference</th>
+                <th>Titre</th>
+                <th>Année</th>
+                <th>Télécharger</th>
+                <th>Avis</th>
+                <th>Date Achat</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>85466</td>
+                <td>Tarzan </td>
+                <td>2013</td>
+                <td><button type="button" class="btn openPaddingLink" ng-click="download()">TELECHARGER</button></td>
+                <td><button type="button" class="btn">DONNER AVIS</button></td>
+                <td>14/09/2016</td>
+            </tr>
+            <tr>
+                <td>00545</td>
+                <td>Xmen</td>
+                <td>2016</td>
+                <td><button type="button" class="btn">TELECHARGER</button></td>
+                <td><button type="button" class="btn disabled">DONNER AVIS</button></td>
+                <td>01/05/2016</td>
+            </tr>
+            <tr>
+                <td>00156</td>
+                <td>Titanic</td>
+                <td>2013</td>
+                <td><button type="button" class="btn">TELECHARGER</button></td>
+                <td><button type="button" class="btn">DONNER AVIS</button></td>
+                <td>15/06/2015</td>
+            </tr>
+            </tbody>
+        </table>
+        </div>
+        
+        <script type="text/ng-template" id="dialogDownload">
+            <div class="ngdialog-message">
+                <h3>download progress</h3>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar"
+                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                            40% <p id="demo"></p>
+                        </div>
+                    </div>
+            <button class="inline close-this-dialog" ng-click="closeThisDialog()">Cancel</button>                
+                </div>
+        </script>
+        
+        
+        
+        
+        <!-- CONNEXION DIALOG -->
+        
+	<!--a href="" data-rel="popup" class="ui-btn ui-corner-all ui-shadow ui-btn-inline openPaddingLink" data-transition="pop" ng-click="open()">Basic Popup</a>
+<-a href="" class="openPaddingLink" ng-click="open()">Open dialog</a>
+    <- Template ->
     <script type="text/ng-template" id="dialogLogin">
        <div class="ngdialog-message">
             <h3>Connexion</h3>
-            Identifiant: <input ng-model="logName" type="text" placeholder="mail adress" /> <br/>
-            Mot de passe: <input ng-model="logPass" type="password" />
-            <button type="submit" ng-model="login"> Connexion </button>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Password:</label>
+                    <input type="password" class="form-control" id="pwd">
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
             <p>Close this dialog: <button class="inline close-this-dialog" ng-click="closeThisDialog()">Close</button></p>
 
         </div>
-    </script>
+    </script-->
 
 </div>
