--- a/client/app/views/detail.html
+++ b/client/app/views/detail.html
@@ -2,6 +2,16 @@
 <div class="detail" ng-controller="detailCtrl">	
 	<div id="poster">
 		<img src="{{details.poster}}" />
+		
+		<div>
+            <div>
+                <form class="form-group">					  
+                    <b>Support :<select class="form-control" id="sel1"> <option>Copie Numerique</option><option>DVD</option><option>BluRay</option> </select>
+                    <b>Prix Unitaire (€):</b> <input type="text" class="form-control" value="7,00"  disabled>
+                    <button type="submit" class="btn btn-primary" ng-click="addPanier(details.title,details.year,'copie numerique',1,7.00)"><b> Ajouter Panier</b></button>
+                </form>
+            </div>
+        </div>
 	</div>
 	<div id="info"> 
 		<h2>{{details.title}}</h2>
@@ -15,6 +25,43 @@
 		<div id="synopsis">
 			{{details.overview}}
 		</div>
+		
+		<a href="" data-toggle="modal" data-target="#dialogVideo"> Visionner la Bande Annonce </a>				
 	</div>
 	
-</div>
+	
+		
+		
+		
+		<!-- Modal SIGN UP -->
+	  <div class="modal fade" id="dialogVideo" role="dialog">
+		<div class="modal-dialog">
+		
+		  <!-- Modal content-->
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <button type="button" class="close" data-dismiss="modal">&times;</button>
+			  <h4 class="modal-title">Inscription</h4>
+			</div>
+			<div class="modal-body">
+				<div class="video">
+                    <iframe width="520" height="400" src="https://www.youtube.com/embed/rUYFJJqXLLM"></iframe> 
+                </div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+			</div>
+		  </div>
+		  
+		</div>
+	  </div>
+	 <!-- End Modal SIGN UP --> 
+		
+		
+	
+</div>  <!--{{details.title}},{{details.year}},'copie numerique','1','7,00'-->
+
+
+
+
+				
