--- a/client/app/styles/detail.css
+++ b/client/app/styles/detail.css
@@ -10,8 +10,9 @@
 }
 
 #synopsis {
-	width:70%;
+	width:100%;
 	text-align:justify;
+	margin-bottom:5%;
 }
 
 #info h2{
@@ -36,4 +37,13 @@
 	//background-color:black;		/*#706b64*/
 	box-shadow: 0px 2px 5px #1cla19;
 	border-radius: 5px;
+	margin-bottom:20px;
 }
+
+.form-control{
+	margin-bottom:10px;
+}
+.formAjout{
+	text-align:center;
+}
+
