--- a/client/app/styles/achat.css
+++ b/client/app/styles/achat.css
@@ -7,3 +7,16 @@
 .listAchat>table>thead>tr{
     text-align:center;
 }
+.table{
+	margin-top: 3%;
+	text-align: center;
+	color:black;
+	background-color: white;
+
+	border-collapse: collapse;
+}
+
+
+.listAchat button{
+	background-color: #6C6D6D;
+}
