--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -79,7 +79,6 @@ header{
 	/*display: inline-block;*/
 	margin-left: 0px;
 	width: 100%;
-
 }
 
 .searchIndex a{
@@ -171,6 +170,15 @@ header{
 }
 
 
+/*Login*/
+.btn-block {
+	background-color: #117791;
+	box-shadow: 3px 3px 4px 0px #A4A4A4;
+-moz-box-shadow: 3px 3px 4px 0px #A4A4A4;
+-webkit-box-shadow: 3px 3px 4px 0px #A4A4A4;
+}
+
+
 /*.navBardemoBasicUsage md-content .ext-content {
   padding: 50px;
   margin: 20px;
@@ -235,12 +243,15 @@ header{
 	display:flex;
 	/*margin-top:20px;*/
 	margin-bottom:40px;
-    width:99%;
+	
+	margin-left:20%;
+    /*width:99%;*/
 }
 
 #middleRight{
     width:80%;
-    margin-left:2%;
+    /*margin-left:17%;*/
+    margin:auto;
 }
 
 #view{
@@ -260,21 +271,77 @@ header{
 	width:75%;
 }
 
+
+.modal-header {
+	/*color: #117791;*/
+	/*text-align: left;*/
+	
+
+	padding:35px 50px;
+	background-color: #98C6D2;
+
+	-webkit-border-top-left-radius: 25px;
+-webkit-border-top-right-radius: 25px;
+-moz-border-radius-topleft: 25px;
+-moz-border-radius-topright: 25px;
+border-top-left-radius: 25px;
+border-top-right-radius: 25px;
+}
+
+.modal-header h4{
+	text-align: center;
+	font-size: 220%;
+	font-family:"palatino linotype", palatino, serif;
+	font-variant: small-caps;
+	font-weight: 600;
+
+}
+
+.modal-content {
+	box-shadow: 0px 0px 12px 3px rgba(0, 0, 0, 0.15);
+-moz-box-shadow: 0px 0px 12px 3px rgba(0, 0, 0, 0.15);
+-webkit-box-shadow: 0px 0px 12px 3px rgba(0, 0, 0, 0.15);
+
+	border: 2px solid;
+    -webkit-border-radius: 25px;
+-moz-border-radius: 25px;
+border-radius: 25px;
+}
+
 /*######################################################### MENU	*/
-#middleLeft{
-	/*flex:.6;
-	position:fixed;*/
+.middleLeft{
+	float: left;
+	display: flex;
+	/*position:fixed;*/
 	/*top: 33%;*/
 	/*width: 300px;*/
+	padding: 1%;
+	text-decoration:none;
 	height:66%;
 	text-align: left;
-	background-color:#191970;		/*#706b64*/
+	background-color:#117791;		/*#706b64*/
 	box-shadow: 0px 2px 5px #1cla19;
 	border-radius: 5px;
-	color:white;
-    width:13%;
+	
+    width:19%;
     margin-left: 0px;
+
 }
+
+.middleLeft a{
+	color: black;
+}
+
+
+.navbar-collapse.collapse {
+    display: block 
+    width: auto;
+    padding-bottom: 0;
+    overflow: visible;
+ }
+ .navbar-collapse.in {
+    overflow-x: visible;
+  }
 
 /*######################################################### FOOTER	*/
 footer{
