--- a/client/app/styles/achat.css
+++ b/client/app/styles/achat.css
@@ -12,8 +12,12 @@
 	text-align: center;
 	color:black;
 	background-color: white;
-
+	text-align:center;
 	border-collapse: collapse;
+}
+
+.table th{
+	text-align:center;
 }
 
 
