--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -348,7 +348,7 @@ border-top-right-radius: 25px;
   display: inline-block;
   height: 100%;
   vertical-align: middle;
-  margin-right: -4px; /* Adjusts for spacing */
+  margin-right: -4px;
 }
 
 .modal-content {
@@ -401,7 +401,7 @@ border-radius: 25px;
 footer{
 
 	display:flex;
-	padding-top:25px;
+	padding-top:8px;
 	position: relative;
 	height:85px;
 	background:url(../images/logos/footer.png);
@@ -423,6 +423,13 @@ footer{
 	text-shadow: black 0px 0px;	
 	width:100%;
 }
+
+.infoFooter a{
+	color: white;
+	text-decoration:underline;
+}
+
+
 /*
 *{
 	margin:0;
