--- a/client/app/styles/search.css
+++ b/client/app/styles/search.css
@@ -54,7 +54,7 @@ figcaption{
 }
 
 .search p{
-	width: 25%;
+	width: 31%;
 	display: inline-block;
 	text-align: center;
 	margin-bottom: 3%;
@@ -65,6 +65,12 @@ figcaption{
 	display: block;
 	text-align: center;
 }
+
+.search p>a>img {
+	width: 170px;
+	height: 230px;
+}
+
 
 .search #result{
 	color:grey;
