--- a/client/app/views/achat.html
+++ b/client/app/views/achat.html
@@ -5,14 +5,14 @@
         <p style="font-style: oblique; color:grey; margin-left:5%; font-family:New Century Schoolbook, serif;">La liste de tous vos achats</p>            
         
         <div>
-        <table class="table table-hover  ">
-            <thead class="thead-inverse"> 
+        <table class="table table-hover">
+            <thead class="thead-inverse" > 
             <tr>
+				<th></th>
                 <th>Titre</th>
                 <th>Année</th>
                 <th>Télécharger</th>
                 <th>Avis</th>
-                <th></th>
                 <th>Date Achat</th>
             </tr>
             </thead>
@@ -90,14 +90,14 @@
         
         <script type="text/ng-template" id="dialogDownload">
             <div class="ngdialog-message">
-                <h3>download progress</h3>
+                <h3>Téléchargement en cours ...</h3>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped active" role="progressbar"
                         aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width:55%">
                             55% <p id="demo"></p>
                         </div>
                     </div>
-            <button class="inline close-this-dialog" ng-click="closeThisDialog()">Cancel</button>                
+            <button class="inline close-this-dialog" ng-click="closeThisDialog()">Quitter</button>                
                 </div>
         </script>
         
