--- a/client/app/views/search.html
+++ b/client/app/views/search.html
@@ -4,7 +4,7 @@
     <p id="result"> ({{datas.length}} résultats) </p>
     </div>
     <div><center>
-    	<p ng-repeat="data in datas"><a href="#detail/124905"><img ng-src='{{data.poster}}' class="img-rounded poster1" alt=""/></a>
+    	<p ng-repeat="data in datas"><a href="#detail/{{data.id}}"><img ng-src='{{data.poster}}' class="img-rounded poster1" alt=""/></a>
         <br>
         <a href="#detail/124905">{{data.title}} <br/> {{data.year}}</a>
         </p>
