--- a/client/app/views/achat.html
+++ b/client/app/views/achat.html
@@ -8,15 +8,14 @@
         <table class="table table-hover  ">
             <thead class="thead-inverse"> 
             <tr>
+				<th>Référence</th>
                 <th>Titre</th>
                 <th>Année</th>
                 <th>Télécharger</th>
-                <th>Avis</th>
-                <th></th>
+                <th>Avis</th>                
                 <th>Date Achat</th>
             </tr>
             </thead>
-            <!-- <tbody ng-repeat="d in dataAchat"> -->
 
             <!-- <tr>
                 <td>{{d[0]}} </td>
@@ -31,75 +30,71 @@
                 <td>00545</td>
                 <td>Xmen</td>
                 <td>2016</td>
-                <td><button type="button" class="btn openPaddingLink" ng-click="download()" ><span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button></td>
-                <td><button type="button" class="btn disabled">DONNER AVIS</button></td>
+                <td><button type="button" class="btn openPaddingLink" data-toggle="modal" data-target="#dialogDownload" ng-click="download()" ><span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button></td>
+                <td><button type="button" class="btn openPaddingLink disabled" data-toggle="modal" data-target="#dialogComment">DONNER AVIS</button></td>
                 <td>01/05/2016</td>
             </tr>
             <tr>
                 <td>00156</td>
                 <td>Titanic</td>
                 <td>2013</td>
-                <td><button type="button" class="btn openPaddingLink" ng-click="download()"><span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button></td>
-                <td><button type="button" class="btn">DONNER AVIS</button></td>
+                <td> <a href="images/Cats.jpg" download="w3logo"> <button type="button" class="btn openPaddingLink"> <span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button></a></td>
+                <td><button type="button" class="btn openPaddingLink" data-toggle="modal" data-target="#dialogComment">DONNER AVIS</button></td>
                 <td>15/06/2015</td>
             </tr>
             </tbody>
         </table>
-
         </div>
+		
+		<!-- DIALOG DOWNLOAD -->
+		<div class="modal fade" id="dialogDownload" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h3 id="idt">Telechargements</h3>
+					</div>
+					<div class="modal-body" style="padding:40px 50px;">		          
+						<div class="ngdialog-message">					
+							<div class="progress">
+								<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:{{toto}}%">
+									{{toto}}% <p id="demo"></p>
+								</div>
+							</div>					              
+						</div>
+					</div>
+				</div>
+		    </div>
+		</div>
+		<!-- END DIALOG DOWNLOAD -->
 
-
-
+		<!-- DIALOG COMMENT -->
         <div class="modal fade" id="dialogComment" role="dialog">
 			<div class="modal-dialog">
 			<div class="modal-content">
 		    	<div class="modal-header">
 		    	<button type="button" class="close" data-dismiss="modal">&times;</button>
-		          <h4>Avis</h4>
+		          <h4>Donner son avis</h4>
 		        </div>
 
 		        <div class="modal-body" style="padding:40px 50px;">
-		          <form role="form">
-		            <div class="form-group">
-		              <label for="email">Adresse e-mail:</label>
-		              <input type="email" class="form-control" id="email">
-		            </div>
-		            <div class="form-group">
-		              <label for="psw">Mot de passe</label>
-		              <input type="password" class="form-control" id="pwd">
-		              <p style="text-align:right; "><a href="">Mot de passe oublié</a></p>
-		            </div>
-
-		            <div class="checkbox">
-		                    <label><input type="checkbox">Se souvenir de moi</label>
-		            </div>
-		              <button type="submit" class="btn btn-block" data-dismiss="modal" ng-click="isConnect = !isConnect">Se connecter</button>
-
-		          </form>
-
-		        </div>
-		        <div class="modal-footer">
-		        <button type="button" class="btn btn-default pull-left" data-dismiss="modal" >Quitter</button>
-		          <p><a href="" data-toggle="modal" data-target="#dialogSign_up" data-dismiss="modal" >S'inscrire</a></p>
+					<form role="myFormComment">
+						<div class="form-inline">
+						  <label for="email">Note : </label>
+						  <input type="email" class="form-control" id="email">
+						</div>
+						<textarea class="form-control" rows="5" id="comment" placeholder="Votre commentaire ici"></textarea>
+						<button type="submit" class="btn btn-primary" data-dismiss="modal" ng-click="avis()">Envoyer</button>
+					</form>		        
 		        </div>
 		    </div>
 		    </div>
 		</div>
+		<!-- END DIALOG COMMENT -->
 
     </div>
         
-        <script type="text/ng-template" id="dialogDownload">
-            <div class="ngdialog-message">
-                <h3>download progress</h3>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar"
-                        aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width:55%">
-                            55% <p id="demo"></p>
-                        </div>
-                    </div>
-            <button class="inline close-this-dialog" ng-click="closeThisDialog()">Cancel</button>                
-                </div>
-        </script>
+        
         
          
         
