bug: trailer problem

--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -37,7 +37,7 @@
 	  <div class="modal fade" id="dialogVideo" role="dialog">
 		<div class="modal-dialog">
 				<div class="video">
-                    <iframe width="620px" height="400px" src="https://www.youtube.com/embed/rUYFJJqXLLM"></iframe> 
+                    <iframe width="620px" height="400px" src="details.trailer"></iframe> 
                 </div>
 		  
 		</div>
