--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="video">
-                    <iframe width="520" height="400" src="https://www.youtube.com/embed/rUYFJJqXLLM"></iframe> 
+                    <iframe width="520" height="400" ng-src="{{data.trailer}}"></iframe> 
                 </div>
 			</div>
 			<div class="modal-footer">
