--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -29,7 +29,8 @@
 			{{details.overview}}
 		</div>
 				
-        <a href="" data-toggle="modal" data-target="#dialogVideo"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
+        <a href="" data-toggle="modal" data-target="#dialogVideo" ng-show="bd"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
+        <p ng-show="!bd">Bande annonce indisponible.</p>
 	</div>
 	
 	
