Revert "Merge branch 'development' into Jeremy"
This reverts commit 06c6b4eec2af7b77e94c25091dba0b38dfb85853, reversing
changes made to 060914468dcdfd660feb98a3dc87d449c2420da7.

--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -29,8 +29,7 @@
 			{{details.overview}}
 		</div>
 				
-        <a href="" data-toggle="modal" data-target="#dialogVideo" ng-show="bd"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
-        <p ng-show="!bd">Bande annonce indisponible.</p>
+        <a href="" data-toggle="modal" data-target="#dialogVideo"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
 	</div>
 	
 	
@@ -47,6 +46,8 @@ data="{{details.trailer}}">
 		</div>
 	  </div>
 	 <!-- End Modal VIDEO --> 	
+		
+		
 </div>  <!--{{details.title}},{{details.year}},'copie numerique','1','7,00'-->
 
 
