--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -29,7 +29,8 @@
 			{{details.overview}}
 		</div>
 				
-        <a href="" data-toggle="modal" data-target="#dialogVideo"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
+        <a href="" data-toggle="modal" data-target="#dialogVideo" ng-show="bd"><strong class="alert alert-info"> Visionner la Bande Annonce 	</strong></a>
+        <p ng-show="!bd">Bande annonce indisponible.</p>
 	</div>
 	
 	
@@ -46,8 +47,6 @@ data="{{details.trailer}}">
 		</div>
 	  </div>
 	 <!-- End Modal VIDEO --> 	
-		
-		
 </div>  <!--{{details.title}},{{details.year}},'copie numerique','1','7,00'-->
 
 
