--- a/src/main/webapp/client/app/styles/index.css
+++ b/src/main/webapp/client/app/styles/index.css
@@ -49,7 +49,7 @@ header{
 #userIcone{
 	background-color: rgba(0, 0, 255, 0);
 	color:#B3B3B3;
-	margin-top:10%;
+	margin-top:8%;
 }
 
 
@@ -66,7 +66,11 @@ header{
 	display: inline-flex;
 }
 
-
+#userName{
+	color:#B3B3B3;
+	margin-top: 15px;
+	font-size: 17px;
+}
 
 .navbar-right a{
 	text-decoration: none;
