--- a/src/main/webapp/client/app/views/achat.html
+++ b/src/main/webapp/client/app/views/achat.html
@@ -18,8 +18,8 @@
             </thead>    
 
             <tbody>
-			<tr ng-repeat="data in datasOrder">
-                <td>{{data.idReference}} </td>
+			<tr ng-repeat="data in datasOrders">
+                <td>{{data.idProduct}} </td>
 				<td>{{data.title}}</td>
 				<td>{{data.year}}</td>
                 <td><!--a href="images/Cats.jpg" download="w3logo"--><button type="button" class="btn openPaddingLink" data-toggle="modal" data-target="#dialogDownload" ng-click="download()" ><span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button><!--/a--></td>
@@ -29,6 +29,9 @@
             </tbody>
         </table>
         </div>
+
+       
+
 		
 		<!-- DIALOG DOWNLOAD -->
 		<div class="modal fade" id="dialogDownload" role="dialog">
