--- a/src/main/webapp/client/app/views/achat.html
+++ b/src/main/webapp/client/app/views/achat.html
@@ -19,11 +19,11 @@
 
             <tbody>
 			<tr ng-repeat="data in datasOrders">
-                <td>{{data.idProduct}} </td>
+                <td>{{data.idOrder}} </td>
 				<td>{{data.title}}</td>
 				<td>{{data.year}}</td>
                 <td><!--a href="images/Cats.jpg" download="w3logo"--><button type="button" class="btn openPaddingLink" data-toggle="modal" data-target="#dialogDownload" ng-click="download()" ><span class="glyphicon glyphicon-download-alt"/> TELECHARGER</button><!--/a--></td>
-                <td><button type="button" class="btn openPaddingLink " data-toggle="modal" data-target="#dialogComment" ng-disabled={{data.avis}}>DONNER AVIS</button></td>
+                <td><button type="button" class="btn openPaddingLink " data-toggle="modal" data-target="#dialogComment" ng-disabled="true">DONNER AVIS</button></td>
                 <td>{{data.date}}</td>
             </tr>
             </tbody>
