--- a/src/main/webapp/client/app/views/detail.html
+++ b/src/main/webapp/client/app/views/detail.html
@@ -25,7 +25,7 @@
 			<p><b>Genre :</b> {{details.genre}}</p>
 		</div>
 			<h4><u> SYNOPSIS </u></h4>
-		<div id="synopsis">
+		<div id="synopsis" charset="UTF-8">
 			{{details.overview}}
 		</div>
 				
